--- a/estate/src/app/globals.css
+++ b/estate/src/app/globals.css
@@ -13,7 +13,14 @@
     --foreground: #ededed;
   }
 }
-
+* {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
 body {
   color: var(--foreground);
   background: var(--background);
